# dnsd

./: Cargo.toml  TODO.md
src/: config.rs  main.rs  memory_socket.rs  server.rs
src/client/: memory_rt.rs  mod.rs  udp.rs  udp_stream.rs  vanilla.rs  window.rs
