[package]
name = "dnsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
hickory-server = { version = "0.24.0", features = ["resolver"] }
rand = "0.8.5"
resolv-conf = "0.7.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
